Fix Firefox overflow bug

--- a/src/components/PickupPointDetails.css
+++ b/src/components/PickupPointDetails.css
@@ -16,6 +16,7 @@
 .pkpmodal-details-middle {
   overflow: auto;
   flex: 1 1 auto;
+  min-height: 0; /* fix firebox overflow bug */
   -webkit-overflow-scrolling: touch;
 }
 
